# cppCourse-in-Sirius

lab-1/lab1-master/: CMakeLists.txt
lab-1/lab1-master/include/: prime.h
lab-1/lab1-master/src/: CMakeLists.txt  prime.cpp
lab-1/lab1-master/test/: CMakeLists.txt  main.cpp
lab-2/lab-2-main/: CMakeLists.txt
lab-2/lab-2-main/include/: prime.h
lab-2/lab-2-main/src/: no_Er.cpp  prime.cpp
lab-2/lab-2-main/test/: main.cpp
lab-3/lab-3-master/include/: vector.h
lab-3/lab-3-master/src/: CMakeLists.txt  vector.cpp
lab-3/lab-3-master/test/: CMakeLists.txt  main.cpp
lab-4/lab-4-master/: CMakeLists.txt
lab-4/lab-4-master/include/: list.h
lab-4/lab-4-master/src/: CMakeLists.txt  list.cpp
lab-4/lab-4-master/test/: main.cpp
lab-5/lab5-master/: 1.txt  CMakeLists.txt
lab-5/lab5-master/include/: list.h
lab-5/lab5-master/src/: list.cpp  vector.cpp
lab-5/lab5-master/test/: CMakeLists.txt
lab-6/lab-6-master/: 1.txt
lab-6/lab-6-master/include/: matrix.h
lab-6/lab-6-master/src/: CMakeLists.txt  gradient.cpp
lab-7/lab-7-master/: 3.txt  CMakeLists.txt
lab-7/lab-7-master/include/: matrix.h
lab-7/lab-7-master/src/: CMakeLists.txt  matrix.cpp  stream.cpp
lab-7/lab-7-master/test/: CMakeLists.txt  main.cpp
